--- a/cgcs253/stylesheets/default.css
+++ b/cgcs253/stylesheets/default.css
@@ -20,22 +20,31 @@ div#content {
     min-height:100%;
 }
 
-.leftlink {
-    float: left;
-    margin-left: 10px;
+.row {
+    margin: 0 15px;   
 }
 
-.rightlink {
+.headline {
+    display: block;
+    padding-bottom:2px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #bfbfbf;
+}
+
+.leftalign {
+    float: left;
+}
+
+.rightalign {
     float: right;
-    margin-right: 10px;
 }
 
 .post {
     display: block;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
+    margin: 15px 0px 15px 5px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .error {
@@ -43,9 +52,15 @@ div#content {
     color:red;
 }
 
+.date {
+    color: #bfbfbf;
+    font-size: 1em;
+}
+
 /* By the way, this is a comment */
 
 p {
+    margin: .5em 10px;
 	line-height: 1.5em;
 }
 
@@ -66,6 +81,7 @@ h1 {
 h3 {
 	color: #999;
 	font-size: 1.25em;
+	margin: 0;
 }
 
 a {
