--- a/cgcs253/templates/form.html
+++ b/cgcs253/templates/form.html
@@ -9,8 +9,10 @@
         <div id="content">
     
             <h1>Fake Blog</h1>
-        
-            <div class="rightlink"><a href="/blog">Back</a></div><br>
+            
+            <div class="row">
+                <div class="rightalign"><a href="/blog">Back</a></div>
+            </div><br>
             
             <div class="post">
                 <form method="post">
@@ -20,7 +22,7 @@
                     <label>Contents:<br>
                         <textarea name="content">{{content}}</textarea>
                     </label><br>
-                    <div class="rightlink"><input type="submit"></div>
+                    <div class="rightalign"><input type="submit"></div>
                 </form>
             </div>
             <div class="error">{{error}}</div>
