--- a/cgcs253/templates/main.html
+++ b/cgcs253/templates/main.html
@@ -25,7 +25,7 @@
                         </div>
                         
                         <div class="rightalign">
-                            <span class="date">{{post.created.strftime('%m/%d/%y %I:%M %p')}}</span>
+                            <span class="date">{{post.created.strftime('%B %d, %Y')}}</span>
                         </div>
                         
                         <br>
